--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "vue-qrcode-reader": "^2.0.3",
     "vue-router": "^3.0.7",
     "vue-spinner": "^1.0.3",
+    "vue-tiny-tabs": "^1.0.2",
     "vue-vuelidate-jsonschema": "^0.13.4",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
